package br.dev.joaobarbosa.domain;

public enum AttackResult {
  MISSED,
  HIT,
  CRITICAL_HIT,
}
